Archive2/01/72ba6e97457c14/output
main.cpp:36:29: error: template specialization requires 'template<>'
  float  foo_traits<float>::datum;   // no change if this is in global namespace
         ~~~~~~~~~~~~~~~~~  ^
  template<> 
main.cpp:37:30: error: template specialization requires 'template<>'
  double foo_traits<double>::datum;
         ~~~~~~~~~~~~~~~~~~  ^
  template<> 
2 errors generated.
